components/11-base/forms/_forms.scss
////
/// This file defines general form input fields styling.
///
/// @group forms
/// @author Gert-Jan Meire
///
////

$field-icon-position: no-repeat right .75rem center;
$field-icon-padding: 2.5rem;

///
/// The general field atom styling.
///
/// @since 3.0.0
/// @group theming
/// @access public
/// @author Gert-Jan Meire
/// @require $border-radius
/// @require color
/// @require svg-icon
/// @require svg-url
/// @require border-radius
/// @require field-base
/// @require theme
///
@mixin field-base {
  @include theme(
    "border-color",
    "color-tertiary--lighten-2",
    "fields-border-color"
  );
  @include theme(
    "background",
    "color-tertiary--lighten-6",
    "fields-background"
  );
  @include theme("color", "color-tertiary", "fields-color");

  &:focus {
    @include theme(
      "border-color",
      "color-primary--lighten-2",
      "fields-border-focus-color"
    );
    @include theme(
      "background",
      "color-primary--lighten-5",
      "fields-focus-background"
    );

    border: 1px solid;
    outline: 0;
  }

  &:disabled {
    padding-right: $field-icon-padding;
    border: 0;
    background: color("dark-gray", -5) $field-icon-position;
    background-image: svg-as-background(
      "lock-closed",
      color("dark-gray", -2),
      20,
      20
    );
    cursor: not-allowed;
  }

  &.success {
    padding-right: $field-icon-padding;
    border: 1px solid color("green");
    background: color("green", -6) $field-icon-position;
    background-image: svg-as-background(
      "checkmark-circle",
      color("green"),
      26,
      26
    );

    &:focus {
      border-color: color("green");
      background: color("green", -6) $field-icon-position;
      background-image: svg-as-background(
        "checkmark-circle",
        color("green"),
        26,
        26
      );
    }
  }

  &.error {
    padding-right: $field-icon-padding;
    border: 1px solid color("red");
    background: color("red", -6) $field-icon-position;
    background-image: svg-as-background(
      "exclamation-circle",
      color("red"),
      26,
      26
    );

    &:focus {
      border-color: color("red");
      background: color("red", -6) $field-icon-position;
      background-image: svg-as-background(
        "exclamation-circle",
        color("red"),
        26,
        26
      );
    }
  }

  &::-webkit-input-placeholder { // sass-lint:disable-line no-vendor-prefixes
    @include theme(
      "color",
      "color-tertiary--lighten-1",
      "fields-placeholder-color"
    );
    font-style: italic;
    font-weight: normal;
  }

  &:-moz-placeholder { // sass-lint:disable-line no-vendor-prefixes
    @include theme(
      "color",
      "color-tertiary--lighten-1",
      "fields-placeholder-color"
    );
    font-style: italic;
    font-weight: normal;
  }

  &::-moz-placeholder { // sass-lint:disable-line no-vendor-prefixes
    @include theme(
      "color",
      "color-tertiary--lighten-1",
      "fields-placeholder-color"
    );
    font-style: italic;
    font-weight: normal;
  }

  &:-ms-input-placeholder { // sass-lint:disable-line no-vendor-prefixes
    @include theme(
      "color",
      "color-tertiary--lighten-1",
      "fields-placeholder-color"
    );
    font-style: italic;
    font-weight: normal;
  }

  &::placeholder {
    @include theme("color", "color-tertiary", "fields-placeholder-color");
    font-style: italic;
    font-weight: normal;
  }

  display: block;
  width: 100%;
  height: 2.4rem;
  padding: 0 .8rem;
  border: 1px solid;
  border-radius: border-radius("radius-1");
  font-family: $default-font-family;
  font-size: .8rem;
  font-weight: normal;
  appearance: none;

  @include tablet {
    font-size: .7rem;
  }
}

///
/// The base styling for choice fields.
///   - Radio buttons.
///   - Checkboxes.
///
/// @since 3.0.0
/// @group theming
/// @access public
/// @author Gert-Jan Meire
///
@mixin choices-field-base($type) {
  position: relative;
  margin-bottom: .5rem;

  label {
    position: absolute;
    top: 0;
    left: 0;
    padding-left: 1.4rem;
    line-height: 1.6;
    overflow: unset;

    &::before,
    &::after {
      position: absolute;
      content: "";
    }

    &::before {
      display: inline-block;
      left: 0;
      width: 1rem;
      height: 1rem;
      border: 1px solid;
      border-radius: border-radius("radius-1");
      content: "";
    }

    &::after {
      display: block;
    }
  }

  @if $type == "checkbox" {
    label {
      &::before {
        @include theme(
          "background-color",
          "color-tertiary--lighten-6",
          "checkbox-background-color"
        );
        @include theme(
          "border-color",
          "color-tertiary--lighten-2",
          "checkbox-border-color"
        );
      }

      &::after {
        top: 0;
        left: -.1rem;
        width: 1rem;
        height: 1rem;
      }
    }
  }

  @if $type == "radio" {
    label {
      &::before {
        @include theme(
          "background-color",
          "color-tertiary--lighten-6",
          "radio-background-color"
        );
        @include theme(
          "border-color",
          "color-tertiary--lighten-2",
          "radio-border-color"
        );

        border-radius: border-radius("radius-4");
      }

      &::after {
        @include theme(
          "background-color",
          "color-primary--lighten-1",
          "radio-background-color"
        );
        @include theme(
          "border-color",
          "color-primary--lighten-1",
          "radio-border-color"
        );

        top: .3rem;
        left: .3rem;
        width: .4rem;
        height: .4rem;
        border-radius: border-radius("radius-4");
      }
    }
  }

  input[type="radio"],
  input[type="checkbox"] {
    position: absolute;
    opacity: 0;

    //
    // Styling of the label.
    //
    + label {
      @include theme("color", "color-tertiary", "label-color");

      position: relative;

      // Hide checkmark by default.
      &::after {
        content: none;
      }
    }

    //
    // Checkbox specific success state.
    // Checkbox specific error state.
    //
    [class*="cs--"] & {
      &.success + label::before {
        border-color: color("green");
      }

      &.error + label::before {
        border-color: color("red");
      }
    }

    //
    // @TODO: Update when a focus style has been designed.
    //
    &:focus + label {
      outline: 1px dotted;
    }

    //
    // Disabled state.
    //
    &:disabled {
      + label {
        font-weight: normal !important; // sass-lint:disable-line no-important
        cursor: not-allowed;

        &::before {
          border-color: color(
            "dark-gray",
            -4
          ) !important; // sass-lint:disable-line no-important
          background: color(
            "dark-gray",
            -4
          ) !important; // sass-lint:disable-line no-important
        }

        &::after {
          color: color(
            "dark-gray"
          ) !important; // sass-lint:disable-line no-important
        }
      }
    }

    //
    // Checkbox specific styling.
    //
    @if $type == "checkbox" {
      // Checked state.
      &:checked {
        // Show checkmark on checked.
        + label {
          @include icon("checkmark", "after");

          @include bold-text;

          &::after {
            font-size: 1.2rem;
            line-height: 1;
          }
        }

        + label::before {
          @include theme(
            "background-color",
            "color-primary--lighten-5",
            "checkbox-background-color-checked"
          );
          @include theme(
            "border-color",
            "color-primary",
            "checkbox-border-color-checked"
          );
        }

        + label::after {
          @include theme("color", "color-primary", "checkbox-checkmark-color");
        }
      }
    }

    //
    // Radio specific styling.
    //
    @if $type == "radio" {
      // Checked state.
      &:checked {
        // Show checkmark on checked.
        + label {
          @include bold-text;
        }

        + label::before {
          @include theme(
            "background-color",
            "color-primary--lighten-5",
            "radio-background-color-checked"
          );
          @include theme(
            "border-color",
            "color-primary",
            "radio-border-color-checked"
          );
        }

        + label::after {
          @include theme("color", "color-primary", "radio-checkmark-color");
          content: "";
        }
      }
    }
  }
}

.form-disclaimer {
  @include theme('color', 'color-tertiary--lighten-1', 'form-disclaimer-color');

  margin: 1.2rem 0;
  font-size: .6rem;
}

